# my-windows

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .gitignore  README.md  System-Init.ps1  applications.yaml.tmpl  dot_zshrc.tmpl  komorebi.bar.json.tmpl  komorebi.json.tmpl  run_onchange_source-zshrc.sh.tmpl  run_onchange_ubuntu-install-packages.sh.tmpl  run_onchange_windows-copy-neovim-config.ps1.tmpl  run_onchange_windows-install-packages.ps1.tmpl  run_windows-copy-neovim-config.ps1.tmpl
.chezmoidata/: packages.yaml
.github/: FUNDING.yml
Documents/WindowsPowerShell/: Microsoft.PowerShell_profile.ps1.tmpl
autohotkey/: .#layers.ahk  CHANGELOG.md  LICENSE  Layers.hs  Main.hs  README.md  cabal.project  includes.ahk  init.ahk  layers-help.ahk  layers.ahk  layers.cabal  main.ahk  pahket.ahk  pahket.toml  remappings.ahk  test.ahk  text-expansions.ahk
autohotkey/dhall/: layers.dhall
autohotkey/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
autohotkey/dist-newstyle/src/: layering-d7d60ed08c5a0f0c.cache
autohotkey/layers/: thm-init.ahk
autohotkey/lib/: RunOrActivate.ahk  TapHoldManager.ahk
autohotkey/text-expansions/: code.ahk  phrases.ahk  symbols.ahk  words.ahk
boxstarter/: System-Init.ps1
dot_config/: whkdrc.tmpl
espanso/: .#default.yml  default.yml
filejuggler/: Config.xml  Config_2.xml  Config_3.xml  Config_4.xml  Config_6.xml  Config_7.xml  README.md
windows-terminal/: profiles.json  profiles_2.json
wox/: MonokaiNight.xaml  README.md
zazu/: .zazurc.json
(+5 files in other folders)
