cabal-version:       3.0
name:                layers
version:             0.0.0
license:             MIT
author:              Nikita Tchayka
maintainer:          nick@booster.cloud

executable layers
  main-is:             Layers.hs
  build-depends:       base ^>=4.12.0.0
                     , layering
  default-language:    Haskell2010
